# w2_deply_aplicacao

./: README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-app.yml
app/: main.py  schema.py
data/: data.py
tests/: test_request_api.py
